# moo

./: .gitignore  Cargo.toml  README.md
cpp/: CHANGELOG.md  CMakeLists.txt  README.md  mooreader.h  mootest.cpp
crates/moo/: Cargo.toml
crates/moo/src/: lib.rs  prelude.rs
crates/moo/src/registers/: descriptors_16.rs  descriptors_32.rs  mod.rs  registers_16.rs  registers_32.rs
crates/moo/src/test/: comparison.rs  mod.rs  moo_test.rs  test_state.rs
crates/moo/src/test_file/: mod.rs  stats.rs
crates/moo/src/types/: chunks.rs  comparison.rs  cycles.rs  effective_address.rs  errors.rs  flags.rs  metadata.rs  mod.rs  ram.rs  registers.rs  registers_16.rs  registers_32.rs  state.rs  test.rs  test_state.rs
crates/moo/tests/: round_trip.rs
crates/moo/tests/test_data/: 00.MOO
crates/moo_report/: Cargo.toml
crates/moo_report/src/: main.rs
crates/moo_util/: Cargo.toml  README.md
crates/moo_util/src/: args.rs  enums.rs  file.rs  main.rs  schema_db.rs  structs.rs  util.rs  working_set.rs
crates/moo_util/src/check/: args.rs  run.rs
crates/moo_util/src/commands/: mod.rs
crates/moo_util/src/commands/check/: args.rs  mod.rs  run.rs
crates/moo_util/src/commands/display/: args.rs  run.rs
crates/moo_util/src/commands/edit/: args.rs  run.rs
crates/moo_util/src/commands/find/: run.rs
crates/moo_util/src/display/: args.rs  mod.rs  run.rs
crates/moo_util/src/find/: args.rs  mod.rs  run.rs
crates/moo_util/src/functions/: add_masks.rs  check.rs  mod.rs  trim.rs
doc/: moo_format_v1.md
python/: moo2json.py
