[workspace]
members = [
    "crates/moo",
    "crates/moo_report",
    "crates/moo_util"
]
resolver = "2"
default-members = ["crates/moo"]

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["Daniel Balsom"]
license = "MIT"
repository = "https://github.com/dbalsom/moo"

[workspace.dependencies]
binrw = "0.15"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
env_logger = "0.11"
log = "0.4"

[workspace.dependencies.iced-x86]
version = "1.21"
default-features = false
# See below for all features
features = ["std", "encoder", "decoder", "nasm", "instr_info", "serde"]

