[package]
name = "moo-rs"
description = "A library crate for reading and writing MOO (Machine Opcode Operation) files."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "moo"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[dependencies]
binrw = { workspace = true }
sha1 = "0.11.0-pre.5"
env_logger.workspace = true
# Optional dependencies
serde = { version = "1.0", features = ["derive"], optional = true }
log = "0.4.21"
thiserror = "2.0"
flate2 = { workspace = true, optional = true }
document-features.workspace = true

[dev-dependencies]
tempfile = "3.23.0"

[features]
default = ["use_serde", "gzip"]
## Uses [serde](https://docs.rs/serde/latest/serde/) for serialization/deserialization support. This feature provides the `Deserialize` trait for several MOO types.
use_serde = ["serde"]
## Support reading and writing gzipped MOO archives.
gzip = ["flate2"]