[package]
name = "moo_util"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
moo-rs = { path = "../moo" }

log.workspace = true
env_logger = "0.11"
bpaf = { version = "0.9", features = ["autocomplete"] }
anyhow = "1.0"
regex = "1.11.2"
tempfile = "3.23.0"
once_cell = "1.21"
rayon = "1.11"

